<resources>
    <string name="app_name">Planapp.es</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_SingUp">Registrate</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Nombre Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Registrate</string>
    <string name="atras">Volver atrás</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El nombre de usuario es incorrecto</string>
    <string name="error_invalid_password">Esta contraseña es demasiado cortat</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="title_activity_main">Planapp.es</string>

    <string name="navigation_drawer_open">Abre el menu deslizante</string>
    <string name="navigation_drawer_close">Cerrar el menu deslizante</string>

    <string name="action_settings">Configuracion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prueba">prueba</string>
    <string name="logo_de_la_app">Logo de la app</string>
    <string name="nombre_del_plan">Nombre del plan...</string>
    <string name="lugar_del_plan">Lugar del plan...</string>
    <string name="descripcion_plan">Breve Descripcion...</string>
    <string name="precio_plan">Precio por Persona...</string>
    <string name="plazas_plan">Numero de plazas...</string>
    <string name="fecha_del_plan">Fecha del Evento...</string>
    <string name="hora_del_plan">Hora del Evento...</string>
    <string name="crear_plan">Crear Plan</string>

    <string name="titulo_fragment_crear_plan">Crea un plan</string>
    <string name="crear_plan_sin_loguin">¡Para crear un plan, debes estar logueado!</string>
</resources>
